--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,22 @@
 .App {
     --header_height: 60px;
+    background: #FFFFFF;
+    display: flex;
+    position: relative;
+    justify-content: center;
 }
 
 .hw {
-
+    max-width: 1280px;
+    margin: 0 auto;
 }
 
 .hwTitle {
-
+    margin-top: 35px;
+    padding-top: 25px;
+    padding-left: 70px;
+    font-weight: bold;
+    border-bottom: 1px solid #D9D9D9;
+    padding-bottom: 9px;
+    margin-bottom: 10px;
 }
