--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,41 @@
 .sendForm {
-
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 1rem 0;
+    flex-wrap: nowrap;
 }
 
-.textarea {
-
+.textarea{
+    background: #F5F7FB;
+    min-height: 2rem;
+    padding: 0.3rem;
+    margin: auto;
+    box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 20px;
+    resize: none;
+    overflow: hidden;
+    border: none;
+    width: 75%;
 }
-
-.button {
+.button{
+    margin: auto;
+    background: #0066CC;
+    border-radius: 20px;
+    min-height: 2rem;
+    width: 20%;
+    color: #ffffff;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
 
 }
 
 .button:hover {
-
+    background: #0032c7;
 }
 .button:active {
-
+    background: #0032c7;
+    color: #FFFFFF;
 }
