--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,36 +1,75 @@
 .button {
-}
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    text-align: left;
 
+    font-style: normal;
+    height: 30px;
+    width: 149px;
+    left: 574px;
+    top: 1465px;
+    border-radius: 3px;
+    padding: 5px 24px 5px 24px;
+    color: #FFFFFF;
+
+
+}
 .disabled {
+    color: #002E5C;
+    background: #004D99;
+    opacity: 0.5;
 }
 
 .secondary {
+    color: #0066CC;
+    border: 1px solid #004D99;
+    background: #fff;
+
 }
 
 .default {
+    color: #FFFFFF;
+    background: #0066CC;
 }
 
 .red {
+    background: #CC1439;
 }
 
 .default:hover {
+    background: #0080FF;
+    color: #FFFFFF;
+
 }
 
 .red:hover {
+    background: #FF1A47;
+
 }
 
 .secondary:hover {
+    background: #E5F0FA;
+    color: #0066CC;
 }
 
 
 .default:active {
+    background: #0059B2;
+    color: #FFFFFF;
 }
 
 .secondary:active {
+    background: #C9E5FF;
+    color: #0066CC;
 }
 
 .red:active {
+    background: #B31232;
+    color: #FFFFFF;
 }
 
 .button:disabled {
+    background: #E5F0FA;
+    color: #0066CC;
 }
