--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,80 @@
 .sidebar {
-}
+    position: absolute;
+    width: 317px;
+    height: 100%;
+    z-index: 2;
+    left: -317px;
+    padding: 16px 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    transition: all 0.5s;
+    background-color: rgba(255, 255, 255,1);
+    /*border-right:1px solid black;*/
 
+}
+.test{
+    background-color: rgba(255, 255, 255,.1);
+}
 .sidebar.open {
+    left: 0;
+    transition: all .5s;
 }
 
 .background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    opacity: 0.5;
+    z-index: 1;
 }
-
 .nav {
-}
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 29px;
 
+}
 .nav a {
+    display: flex;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000000;
+    margin-bottom: 45px;
+    text-decoration: none;
 }
 
 .nav a:hover {
+    color: #58ACFF;
 }
 
-.nav a.active {
+nav a.active {
+    text-decoration: underline;
+    color: #000000 ;
 }
 .close {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+
+    background-color: rgba(0, 89, 178, 1)
+
 }
 
 .close img {
+    width: 100%;
+    height: 100%;
+    background: #FFFFFF;
+}
+.close img:hover {
+
+    background-color: rgba(0, 0, 0, 0.3);
 }
