--- a/src/s2-homeworks/hw12/HW12.module.css
+++ b/src/s2-homeworks/hw12/HW12.module.css
@@ -9,8 +9,8 @@
 }
 
 [data-theme='3'] {
-    --color: #000000;
-    --background: #002046;
+    --color: #FFFFFF;
+    --background: #212A34;
 }
 [data-theme='4'] {
     --color: #090505;
